# dbt-snowflake-nyc-taxi

./: .gitignore  README.md  pyproject.toml
.github/workflows/: dbt_ci.yml  pipeline_monthly.yml
docs/: 01-snowflake-setup.md  02-ingestion-raw.md  03-dbt-models-tests.md  04-github-actions-ci.md
ingestion/: config.py  downloader.py  loader.py  main.py  pipeline.py  protocols.py
nyc_taxi_dbt/: dbt_project.yml  profiles.yml
nyc_taxi_dbt/models/final/: daily_summary.sql  hourly_patterns.sql  zone_analysis.sql
nyc_taxi_dbt/models/staging/: _sources.yml  _stg_clean_trips.yml  stg_clean_trips.sql
nyc_taxi_dbt/tests/: assert_no_aberrant_speed.sql
streamlit/: app.py
streamlit/pages/: 1_📊_Rapport.py  2_🎓_Présentation.py
streamlit/utils/: snowflake.py
