[project]
name = "nyc-taxi-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cryptography>=48.0.0",
    "pandas>=2.3.3",
    "plotly>=6.8.0",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "snowflake-connector-python>=4.6.0",
    "streamlit>=1.58.0",
]

[dependency-groups]
dev = [
    "pandas>=2.3.3",
    "pyarrow>=24.0.0",
]
